--- a/hands_on_ex/hands_on_ex02/hands_on_ex02.qmd
+++ b/hands_on_ex/hands_on_ex02/hands_on_ex02.qmd
@@ -85,6 +85,10 @@ ggplot(data=exam_data,
 ```
 :::
 
+::: callout-note
+Plot is hard to visualise. Not recommended as I cannot see anything
+:::
+
 ## **Working with ggrepel**
 
 ::: panel-tabset
@@ -124,6 +128,10 @@ ggplot(data=exam_data,
 ```
 :::
 
+::: callout-note
+Plot shows clearly the points as well as the student 289, 321, 305, 177, 227
+:::
+
 ## **Beyond ggplot2 Themes**
 
 ::: panel-tabset
@@ -157,7 +165,37 @@ ggplot(data=exam_data,
 ```
 :::
 
+::: callout-note
+This [link](https://ggplot2.tidyverse.org/reference/#themes) shows more about ggplot2 `Themes.`
+:::
+
+I will try a few more themes:
+
+```{r}
+ggplot(data=exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins=20, 
+                 boundary = 100,
+                 color="grey25", 
+                 fill="grey90") +
+  theme_test() +
+  ggtitle("Distribution of Maths scores") 
+```
+
+```{r}
+ggplot(data=exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins=20, 
+                 boundary = 100,
+                 color="grey25", 
+                 fill="grey90") +
+  theme_void() +
+  ggtitle("Distribution of Maths scores") 
+```
+
 ## **Working with ggtheme package**
+
+ *The Economist* theme is used.
 
 ::: panel-tabset
 ## The plot
@@ -190,7 +228,33 @@ ggplot(data=exam_data,
 ```
 :::
 
+I proceed to try another [theme](https://yutannihilation.github.io/allYourFigureAreBelongToUs/ggthemes/)
+
+```{r}
+ggplot(data=exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins=20, 
+                 boundary = 100,
+                 color="grey25", 
+                 fill="grey90") +
+  ggtitle("Distribution of Maths scores") +
+  theme_wsj()
+```
+
+```{r}
+ggplot(data=exam_data, 
+             aes(x = ENGLISH)) +
+  geom_histogram(bins=20, 
+                 boundary = 100,
+                 color="grey25", 
+                 fill="grey90") +
+  ggtitle("Distribution of English scores") +
+  theme_stata()
+```
+
 ## **Working with hrbthems package**
+
+From guidance of Prof Kam, [**hrbrthemes**](https://cinc.rud.is/web/packages/hrbrthemes/) package provides a base theme that focuses on typographic elements, including where various labels are placed as well as the fonts that are used.
 
 ::: panel-tabset
 ## The plot
@@ -261,15 +325,18 @@ ggplot(data=exam_data,
 ```
 :::
 
+::: callout-note
+Vertical grid-line is removed. To take note
+:::
+
 ## **Beyond Single Graph**
 
-## 
+Math histogram is plot
 
 ::: panel-tabset
 ## The code
 
 ```{r}
-
 
 p1 <- ggplot(data=exam_data, 
              aes(x = MATHS)) +
@@ -280,10 +347,12 @@ p1 <- ggplot(data=exam_data,
   coord_cartesian(xlim=c(0,100)) +
   ggtitle("Distribution of Maths scores")
 
+p1
+
 ```
 :::
 
-## 
+English histogram is plot
 
 ::: panel-tabset
 ## The code
@@ -299,6 +368,8 @@ p2 <- ggplot(data=exam_data,
                  fill="grey90") +
   coord_cartesian(xlim=c(0,100)) +
   ggtitle("Distribution of English scores")
+
+p2
 
 ```
 :::
@@ -319,6 +390,8 @@ p3 <- ggplot(data=exam_data,
   coord_cartesian(xlim=c(0,100),
                   ylim=c(0,100)) +
   ggtitle("English scores versus Maths scores for Primary 3")
+
+p3
 
 ```
 :::
@@ -344,7 +417,23 @@ p1 + p2
 ```
 :::
 
+::: callout-note
+What if I need to combine more? 😅
+:::
+
 ## **Combining three ggplot2 graphs**
+
+::: callout-note
+Please note on the following
+
+-   "\|" operator to stack two ggplot2 graphs,
+
+-   "/" operator to place the plots beside each other,
+
+-   "()" operator the define the sequence of the plotting.
+:::
+
+Please refer this [link](https://patchwork.data-imaginist.com/articles/guides/assembly.html) for more
 
 ::: panel-tabset
 ## The plot
@@ -364,7 +453,15 @@ p1 + p2
 ```
 :::
 
+I change to the following
+
+```{r}
+(p1 / p2 / p3)
+```
+
 ## **Creating a composite figure with tag**
+
+From guidance of Prof, with [`inset_element()`](https://patchwork.data-imaginist.com/reference/inset_element.html) of **patchwork**, we can place one or several plots or graphic elements freely on top or below another plot.
 
 ::: panel-tabset
 ## The plot
@@ -415,6 +512,10 @@ p3 + inset_element(p2,
 ```
 :::
 
+::: callout-note
+Not as appealing and potentially confusing. But good to know I can insert a chart inside another
+:::
+
 ## **Creating a composite figure by using patchwork and ggtheme**
 
 ::: panel-tabset
@@ -438,3 +539,15 @@ patchwork & theme_economist()
 
 ```
 :::
+
+::: callout-note
+This is nice! To take note for work and assignment in this course
+:::
+
+I try with wsj theme:
+
+```{r}
+patchwork <- (p1 / p2) | p3
+patchwork & theme_wsj()
+
+```
