--- a/index.qmd
+++ b/index.qmd
@@ -14,16 +14,16 @@ Course information is located [here](https://isss608-ay2023-24jan.netlify.app/le
 
 Image obtained from [here](https://wiki.smu.edu.sg/1920t2isss608/File:Vaa_logo.jpg)
 
-| Date        | Topic                                        | Hands-on Ex                                                                                     | In-class Ex |
-|-------------|----------------------------------------------|-------------------------------------------------------------------------------------------------|-------------|
-| 13 Jan 2024 | Introduction to Visual Analytics             | [Understanding ggplot](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex01/hands_on_ex01) |             |
-| 20 Jan 2024 | Designing Graphs to Enlighten                |                                                                                                 |             |
-| 27 Jan 2024 | Interactivity in Visual Analytics            |                                                                                                 |             |
-| 3 Feb 2024  | Fundamentals of Visual Analytics             |                                                                                                 |             |
-| 17 Feb 2024 | Visual Multivariate Analysis                 |                                                                                                 |             |
-| 24 Feb 2024 | Visualising and Analysing Time-Oriented Data |                                                                                                 |             |
-| 2 Mar 2024  | Visualising and Analysing Geographic Data    |                                                                                                 |             |
-| 9 Mar 2024  | Network Data Visualisation and Analysis      |                                                                                                 |             |
-| 16 Mar 2024 | Visualising and Analysing Text Data          |                                                                                                 |             |
-| 23 Mar 2024 | Information Dashboard Design                 |                                                                                                 |             |
-| 30 Mar 2024 | Poster Presentation                          |                                                                                                 |             |
+| Date        | Topic                                        | Hands-on Ex                                                                                                                                                                  | In-class Ex                                                                     |
+|------------|--------------|----------------------------------|------------|
+| 13 Jan 2024 | Introduction to Visual Analytics             | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex01/hands_on_ex01)                                                                                              | [link](https://czx-isss608.netlify.app/in_class_ex/in_class_ex01/in_class_ex01) |
+| 20 Jan 2024 | Designing Graphs to Enlighten                | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex02/hands_on_ex02)                                                                                              |                                                                                 |
+| 27 Jan 2024 | Interactivity in Visual Analytics            | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex03/hands_on_ex03.1) and [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex03/hands_on_ex03.2.html) |                                                                                 |
+| 3 Feb 2024  | Fundamentals of Visual Analytics             | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex04/hands_on_ex04)                                                                                              |                                                                                 |
+| 17 Feb 2024 | Visual Multivariate Analysis                 |                                                                                                                                                                              |                                                                                 |
+| 24 Feb 2024 | Visualising and Analysing Time-Oriented Data |                                                                                                                                                                              |                                                                                 |
+| 2 Mar 2024  | Visualising and Analysing Geographic Data    |                                                                                                                                                                              |                                                                                 |
+| 9 Mar 2024  | Network Data Visualisation and Analysis      |                                                                                                                                                                              |                                                                                 |
+| 16 Mar 2024 | Visualising and Analysing Text Data          |                                                                                                                                                                              |                                                                                 |
+| 23 Mar 2024 | Information Dashboard Design                 |                                                                                                                                                                              |                                                                                 |
+| 30 Mar 2024 | Poster Presentation                          |                                                                                                                                                                              |                                                                                 |
