--- a/hands_on_ex/hands_on_ex04/hands_on_ex04.qmd
+++ b/hands_on_ex/hands_on_ex04/hands_on_ex04.qmd
@@ -8,6 +8,16 @@ date-modified: "last-modified"
 
 # **Getting Started**
 
+This hands-on exercise covers all of the information from this [link](https://isss608-ay2023-24jan.netlify.app/outline/lesson04_outline).
+
+-   [Hands-on Exercise 4: Visualising Distribution](https://r4va.netlify.app/chap09)
+
+-   [Hands-on Exercise 4: Visual Statistical Analysis](https://r4va.netlify.app/chap10)
+
+-   [Hands-on Exercise 4: Visualising Uncertainty](https://r4va.netlify.app/chap11)
+
+-   [Hands-on Exercise 4: Building Funnel Plot with R](https://r4va.netlify.app/chap12)
+
 ::: callout-note
 ## Zhixuan's personal learning outcomes:
 
@@ -377,7 +387,7 @@ ggbetweenstats(
 )
 ```
 
-###  **Oneway ANOVA Test: *ggbetweenstats()* method**
+### **Oneway ANOVA Test: *ggbetweenstats()* method**
 
 ```{r}
 ggbetweenstats(
@@ -424,6 +434,83 @@ ggbarstats(exam1,
 
 ```{r}
 pacman::p_load(readxl, performance, parameters, see)
+```
+
+## **Installing and loading the required libraries**
+
+```{r}
+pacman::p_load(readxl, performance, parameters, see)
+```
+
+### **Importing Excel file: readxl methods**
+
+```{r}
+car_resale <- read_xls("data/ToyotaCorolla.xls", 
+                       "data")
+car_resale
+```
+
+### **Multiple Regression Model using lm()**
+
+```{r}
+model <- lm(Price ~ Age_08_04 + Mfg_Year + KM + 
+              Weight + Guarantee_Period, data = car_resale)
+model
+```
+
+### **Model Diagnostic: checking for multicolinearity**
+
+```{r}
+check_collinearity(model)
+```
+
+```{r}
+check_c <- check_collinearity(model)
+plot(check_c)
+```
+
+### **Model Diagnostic: checking normality assumption**
+
+```{r}
+model1 <- lm(Price ~ Age_08_04 + KM + 
+              Weight + Guarantee_Period, data = car_resale)
+```
+
+```{r}
+check_n <- check_normality(model1)
+```
+
+```{r}
+plot(check_n)
+```
+
+### **Model Diagnostic: Check model for homogeneity of variances**
+
+```{r}
+check_h <- check_heteroscedasticity(model1)
+```
+
+```{r}
+plot(check_h)
+```
+
+### **Model Diagnostic: Complete check**
+
+```{r}
+check_model(model1)
+```
+
+### **Visualising Regression Parameters: see methods**
+
+```{r}
+plot(parameters(model1))
+```
+
+###  **Visualising Regression Parameters: *ggcoefstats()* methods**
+
+```{r}
+ggcoefstats(model1, 
+            output = "plot")
 ```
 
 # 3 **Visualising Uncertainty**
@@ -661,3 +748,141 @@ ggplot(data = exam,
 ```
 
 # 4 **Funnel Plots for Fair Comparisons**
+
+## **Installing and Launching R Packages**
+
+```{r}
+pacman::p_load(tidyverse, FunnelPlotR, plotly, knitr)
+```
+
+## **Importing Data**
+
+```{r}
+covid19 <- read_csv("data/COVID-19_DKI_Jakarta.csv") %>%
+  mutate_if(is.character, as.factor)
+```
+
+## **FunnelPlotR methods**
+
+```{r}
+funnel_plot(
+  numerator = covid19$Positive,
+  denominator = covid19$Death,
+  group = covid19$`Sub-district`
+)
+```
+
+### **FunnelPlotR methods: Makeover 1**
+
+```{r}
+funnel_plot(
+  numerator = covid19$Death,
+  denominator = covid19$Positive,
+  group = covid19$`Sub-district`,
+  data_type = "PR",     #<<
+  xrange = c(0, 6500),  #<<
+  yrange = c(0, 0.05)   #<<
+)
+```
+
+### **FunnelPlotR methods: Makeover 2**
+
+```{r}
+funnel_plot(
+  numerator = covid19$Death,
+  denominator = covid19$Positive,
+  group = covid19$`Sub-district`,
+  data_type = "PR",   
+  xrange = c(0, 6500),  
+  yrange = c(0, 0.05),
+  label = NA,
+  title = "Cumulative COVID-19 Fatality Rate by Cumulative Total Number of COVID-19 Positive Cases", #<<           
+  x_label = "Cumulative COVID-19 Positive Cases", #<<
+  y_label = "Cumulative Fatality Rate"  #<<
+)
+```
+
+## **Funnel Plot for Fair Visual Comparison: ggplot2 methods**
+
+### **Computing the basic derived fields**
+
+```{r}
+df <- covid19 %>%
+  mutate(rate = Death / Positive) %>%
+  mutate(rate.se = sqrt((rate*(1-rate)) / (Positive))) %>%
+  filter(rate > 0)
+```
+
+```{r}
+fit.mean <- weighted.mean(df$rate, 1/df$rate.se^2)
+```
+
+### **Calculate lower and upper limits for 95% and 99.9% CI**
+
+```{r}
+number.seq <- seq(1, max(df$Positive), 1)
+number.ll95 <- fit.mean - 1.96 * sqrt((fit.mean*(1-fit.mean)) / (number.seq)) 
+number.ul95 <- fit.mean + 1.96 * sqrt((fit.mean*(1-fit.mean)) / (number.seq)) 
+number.ll999 <- fit.mean - 3.29 * sqrt((fit.mean*(1-fit.mean)) / (number.seq)) 
+number.ul999 <- fit.mean + 3.29 * sqrt((fit.mean*(1-fit.mean)) / (number.seq)) 
+dfCI <- data.frame(number.ll95, number.ul95, number.ll999, 
+                   number.ul999, number.seq, fit.mean)
+```
+
+### **Plotting a static funnel plot**
+
+```{r}
+p <- ggplot(df, aes(x = Positive, y = rate)) +
+  geom_point(aes(label=`Sub-district`), 
+             alpha=0.4) +
+  geom_line(data = dfCI, 
+            aes(x = number.seq, 
+                y = number.ll95), 
+            size = 0.4, 
+            colour = "grey40", 
+            linetype = "dashed") +
+  geom_line(data = dfCI, 
+            aes(x = number.seq, 
+                y = number.ul95), 
+            size = 0.4, 
+            colour = "grey40", 
+            linetype = "dashed") +
+  geom_line(data = dfCI, 
+            aes(x = number.seq, 
+                y = number.ll999), 
+            size = 0.4, 
+            colour = "grey40") +
+  geom_line(data = dfCI, 
+            aes(x = number.seq, 
+                y = number.ul999), 
+            size = 0.4, 
+            colour = "grey40") +
+  geom_hline(data = dfCI, 
+             aes(yintercept = fit.mean), 
+             size = 0.4, 
+             colour = "grey40") +
+  coord_cartesian(ylim=c(0,0.05)) +
+  annotate("text", x = 1, y = -0.13, label = "95%", size = 3, colour = "grey40") + 
+  annotate("text", x = 4.5, y = -0.18, label = "99%", size = 3, colour = "grey40") + 
+  ggtitle("Cumulative Fatality Rate by Cumulative Number of COVID-19 Cases") +
+  xlab("Cumulative Number of COVID-19 Cases") + 
+  ylab("Cumulative Fatality Rate") +
+  theme_light() +
+  theme(plot.title = element_text(size=12),
+        legend.position = c(0.91,0.85), 
+        legend.title = element_text(size=7),
+        legend.text = element_text(size=7),
+        legend.background = element_rect(colour = "grey60", linetype = "dotted"),
+        legend.key.height = unit(0.3, "cm"))
+p
+```
+
+### **Interactive Funnel Plot: plotly + ggplot2**
+
+```{r}
+fp_ggplotly <- ggplotly(p,
+  tooltip = c("label", 
+              "x", 
+              "y"))
+fp_ggplotly
+```
